--- a/views/Index.handlebars
+++ b/views/Index.handlebars
@@ -5,9 +5,32 @@
         <li class="list-group-item">
             <b>Id: </b>{{this.id}} <br><b>Name:</b> {{this.name}} <br> <b>Email:</b> {{this.email}}<br> <b>Status:</b>
             {{this.status}}
-            <button type='button' class="btn btn-success" data-toggle="modal" data-target="#add">Add</button>
-            <button type='button' class="btn btn-primary" data-toggle="modal" data-target="#update">Update</button>
-            <button type='button' class="btn btn-danger" data-toggle="modal" data-target="#delete">Delete</button>
+            <br>
+            <div style="display: flex;">
+                <button type='button' class="btn btn-success" data-toggle="modal" data-target="#add">Add</button>
+                <form action="/api/members/{{this.id}}?_method=DELETE" method="POST">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <input type="submit" value="Delete" class="btn btn-danger">
+                </form>
+            </div>
+            <hr>
+            <form action="/api/members/{{this.id}}?_method=PUT" method="POST">
+                <input type="hidden" name="_method" value="PUT" required>
+                {{!-- <div class="form-group">
+                            <label for="id"><b>Id:</b></label>
+                            <input type="text" class="form-control" name="id" required>
+                        </div> --}}
+                <div class="form-group">
+                    <label for="name"><b>Name:</b></label>
+                    <input type="text" class="form-control" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email"><b>Email:</b></label>
+                    <input type="email" class="form-control" name="email" required>
+                </div>
+                <input type="submit" value="Update Member" class="btn btn-primary btn-block">
+            </form>
+            <hr>
         </li>
         {{/each}}
     </ul>
